# nrfdfu-rs

./: .gitignore  Cargo.toml
src/: connection.rs  main.rs  radio_manifest.rs
