[package]
name = "nrfdfu"
version = "0.2.2"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "A flashing tool for the nRF bootloader"
edition = "2024"
authors = [
    "Jonathan Pallant <jonathan.pallant@ferrous-systems.com>",
]
repository = "https://github.com/knurling-rs/nrfdfu-rs"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.51", features = ["derive"] }
crc32fast = "1.2.1"
env_logger = "0.11"
log = "0.4.14"
serialport = { version = "4.7", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zip = "6.0.0"
